--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        iframe{
+            width: 100%;
+            min-height: 80vh;
+        }
+    </style>
 </head>
 <body>
 <h1>Hello world! 阿浩</h1>
+<iframe src="https://stackblitz.com/edit/rxjx-search-input" frameborder="0"></iframe>
 </body>
 </html>
