--- a/index.html
+++ b/index.html
@@ -16,6 +16,28 @@
 </head>
 <body>
 <h1>Hello world! 阿浩</h1>
-<iframe src="https://stackblitz.com/edit/rxjx-search-input" frameborder="0"></iframe>
+<h6>
+    我要评论:
+</h6>
+<div id="vcomments"></div>
+<!-- 评论功能 -->
 </body>
+<script src='//unpkg.com/valine/dist/Valine.min.js'></script>
+<script>
+    new Valine({
+        el: '#vcomments',
+        appId: '262Vov2Lh3h7DS6FtCTk5AGm-gzGzoHsz',
+        appKey: '2GtlsNyiNqEBRkoPOvIUd9JR'
+    })
+</script>
 </html>
+<!--统计功能-->
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?c5d241e01f4c1a67514a8f96b7fc5c63";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
