添加 评论功能

--- a/comment.html
+++ b/comment.html
@@ -10,7 +10,7 @@
 </h6>
 <div id="vcomments"></div>
 </body>
-<script src='//unpkg.com/valine/dist/Valine.min.js'></script>
+<script src='js/Valine.js'></script>
 <script>
     new Valine({
         el: '#vcomments',
