--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
     </style>
 </head>
 <body>
-<h1>Hello world! 我是阿里浩</h1>
-
+<h1>Hello world! 我是阿里浩</h1></br>
+<h2>闯关小游戏</h2>
+<iframe src="https://js13kgames.com/games/super-chrono-portal-maker/index.html" frameborder="0"></iframe></br>
+<h2>超级小浩</h2>
+<iframe src="https://js13kgames.com/games/onoff/index.html" frameborder="0"></iframe>
 <h3>
     我要评论:
 </h3>
