--- a/index.html
+++ b/index.html
@@ -3,65 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+<!--    <link rel="stylesheet" href="css/css3-bg.css">-->
     <style>
         * {
             margin: 0;
             padding: 0;
         }
 
-        iframe {
-            width: 100%;
-            min-height: 80vh;
+        h1 {
+            text-align: center;
+            color: #000000;
+            font-weight: bold;
         }
-        h3{
+
+        h3 {
             margin-top: 20px;
+        }
+
+        .button-list {
+            text-align: center;
+        }
+
+        a {
+            text-decoration: none;
+            color: #000000;
+            margin: 0 20px;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-<h1>Hello world! 我是阿里浩</h1></br>
-<h2>闯关小游戏</h2>
-<iframe src="https://js13kgames.com/games/super-chrono-portal-maker/index.html" frameborder="0"></iframe></br>
-<h2>超级小浩</h2>
-<iframe src="https://js13kgames.com/games/onoff/index.html" frameborder="0"></iframe>
-<h3>
+<div class="container"></div>
+<h1>Hello world! 欢迎来到音乐宇的 Blog</h1></br>
+<div class="button-list">
+    <a href="page/cat.html">Cat Game</a>
+    <a href="page/game.html">Javascript Small Game</a>
+    <a href="page/kkndme">kk 大神</a>
+</div>
+<h3 style="margin-top: 300px">
     我要评论:
 </h3>
 <div id="vcomments"></div>
 <!-- 评论功能 -->
 </body>
 <script src='js/Valine.js'></script>
+<script src='js/public.js'></script>
 <script>
     new Valine({
         el: '#vcomments',
         appId: '262Vov2Lh3h7DS6FtCTk5AGm-gzGzoHsz',
         appKey: '2GtlsNyiNqEBRkoPOvIUd9JR'
     })
-    var h = window.innerHeight,w=window.innerWidth;
-    //禁用右键 （防止右键查看源代码）
-    window.oncontextmenu=function(){return false;}
-    //在本网页的任何键盘敲击事件都是无效操作 （防止F12和shift+ctrl+i调起开发者工具）
-    window.onkeydown = window.onkeyup = window.onkeypress = function () {
-        window.event.returnValue = false;
-        return false;
-    }
-    //如果用户在工具栏调起开发者工具，那么判断浏览器的可视高度和可视宽度是否有改变，如有改变则关闭本页面
-    window.onresize = function () {
-        if (h != window.innerHeight||w!=window.innerWidth){
-            window.close();
-            window.location = "about:blank";
-        }
-    };
-</script>
-<!--统计功能-->
-<script>
-    var _hmt = _hmt || [];
-    (function () {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?c5d241e01f4c1a67514a8f96b7fc5c63";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-    })();
 </script>
 </html>
 
