--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 <div class="container"></div>
 <h1>Hello world! 欢迎来到音乐宇的 Blog</h1></br>
 <div class="button-list">
-    <a href="page/cat.html">Cat Game</a>
+<!--    <a href="page/cat.html">Cat Game</a>-->
     <a href="page/game.html">Javascript Small Game</a>
     <a href="page/kkndme">kk 大神</a>
 </div>
-<h3 style="margin-top: 300px">
-    我要评论:
-</h3>
-<div id="vcomments"></div>
+<!--<h3 style="margin-top: 300px">-->
+<!--    我要评论:-->
+<!--</h3>-->
+<!--<div id="vcomments"></div>-->
 <!-- 评论功能 -->
 </body>
 <script src='js/Valine.js'></script>
