--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
 </head>
 <body>
 <div class="container"></div>
-<h1>Hello world! 欢迎来到音乐宇的 Blog</h1></br>
+<h1>欢迎来到音乐宇的 Blog</h1></br>
 <div class="button-list">
-<!--    <a href="page/cat.html">Cat Game</a>-->
+    <a href="page/cat.html">Cat Game</a>
     <a href="page/game.html">Javascript Small Game</a>
     <a href="page/kkndme">kk 大神</a>
+    <a href="page/vr">vr影院</a>
 </div>
 <!--<h3 style="margin-top: 300px">-->
 <!--    我要评论:-->
