--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 <div class="container"></div>
-<h1>欢迎来到音乐宇的 Blog</h1></br>
+<h1>欢迎来到音乐宇的 Blog1</h1></br>
 <div class="button-list">
     <a href="page/cat.html">Cat Game</a>
     <a href="page/game.html">Javascript Small Game</a>
